tests/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn2.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/multiple-def-uses-in-one-fn2.rs:11:5
   |
LL |     (a.clone(), a)
   |     ^^^^^^^^^^^^^^
   |     |
   |     expected `A`, got `B`
   |     this expression supplies two conflicting concrete types for the same opaque type

error: aborting due to 1 previous error

